--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <resources>
     <string name="app_name">Cars Fans</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--List screen-->
+    <string name="car_image">car_image</string>
+    <string name="default_text">default text</string>
+    <string name="back_button">back button</string>
+
+    <!--Info screen-->
+    <string name="brand_name">Brand: %1$s</string>
+    <string name="model_name">Model: %1$s</string>
+    <string name="year">Year: %1$d</string>
+    <string name="engine">Engine: %1$ы</string>
+    <string name="transmission">Transmission: %1$ы</string>
+    <string name="account_image">account image</string>
+    <string name="account_name">default acc name</string>
+    <string name="like_image">like image</string>
+
 </resources>
